QtHelpQtDoc: unregister obsolete documentations

A system upgrade updates Qt documentation .qch files and increases
namespace versions. Obsolete namespaces remain in
~/.local/share/kdevelop/qthelpcollection.qhc until the user removes this
file manually. As a consequence, duplicate entries appear on the QtHelp
home page.

Unregister namespaces that are absent from currently existing QtHelp
.qch files in order to prevent the duplicate entries and free up disk
space.

Subsequent commits will reuse the new helper function
QtHelpProviderAbstract::cleanUpRegisteredDocumentations().

BUG: 458510
FIXED-IN: 6.1.241200